src/styles.scss
/* You can add global styles to this file, and also import other style files */
/** Adding myriad-pro font as global font **/
@font-face {
  font-family: 'MyriadPro-Regular';
  src: url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/MyriadPro-Regular.eot");
  src: url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/MyriadPro-Regular.woff2") format("woff2"), url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/MyriadPro-Regular.woff") format("woff"), url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/MyriadPro-Regular.ttf") format("truetype"), url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/MyriadPro-Regular.svg#MyriadPro-Regular") format("svg"), url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/MyriadPro-Regular.eot?#iefix") format("embedded-opentype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'MyriadPro-Bold';
  src: url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/MyriadPro-Bold.eot");
  src: url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/MyriadPro-Bold.woff2") format("woff2"), url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/MyriadPro-Bold.woff") format("woff"), url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/MyriadPro-Bold.ttf") format("truetype"), url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/MyriadPro-Bold.svg#MyriadPro-Bold") format("svg"), url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/MyriadPro-Bold.eot?#iefix") format("embedded-opentype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Chocolate Bar Demo';
  src: url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/ChocolateBarDemo.otf");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'mf-sippin-on-sunshine';
  src: url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/mf-sippin-on-sunshine.eot");
  src: url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/mf-sippin-on-sunshine.woff2") format("woff2"), url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/mf-sippin-on-sunshine.woff") format("woff"), url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/mf-sippin-on-sunshine.svg#Montserrat-Regular") format("svg"), url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/mf-sippin-on-sunshine.eot?#iefix") format("embedded-opentype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Montserrat';
  src: url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/Montserrat-Regular.eot");
  src: url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/Montserrat-Regular.woff2") format("woff2"), url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/Montserrat-Regular.woff") format("woff"), url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/Montserrat-Regular.svg#Montserrat-Regular") format("svg"), url("https://spiglobaltestingbucket.s3.amazonaws.com/PrimeMedia/fonts/Montserrat-Regular.eot?#iefix") format("embedded-opentype");
  font-weight: normal;
  font-style: normal;
}

body {
  font-family: 'MyriadPro-Regular',Arial!important;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.modal-dialog {
  .modal-content {
    border-radius: 10px;
    border: 0;
  }
}
.hide {
  display: none !important;
}
.login-scroll {
  border-radius: 6px;
  height: 507px;
  overflow-y: auto;
  overflow-x: hidden;
  &::-webkit-scrollbar {
    width: 7px;
  }
  &::-webkit-scrollbar-track {
    border-radius: 5px;
    background-color: #b5b5b5;
  }
  &::-webkit-scrollbar-thumb {
    border-radius: 5px;
    background-color: #838383;
  }
}
  .main-wrapper {
    padding: 20px 6%;
  }
  .ngxcarousel {
    .ngxcarousel-inner {
      width: 90%;
      margin: auto;
      .item {
        padding: 10px !important;
        vertical-align: bottom !important;
      }
    }
  }
  /*mycollections */
  .mycolletions {
    button {
      background: none;
      border: 0;
      cursor: pointer;
      &:focus {
        outline: none;
      }
      .fa-pencil, .fa-floppy-o {
        font-size: 24px;
      }
      &.editsaveBtn {
        position: absolute;
        top: 18px;
        right: 18px;
        z-index: 9999;
      }
      &.close-icon {
        background: none;
        border: 0;
        padding: 0;
        font-size: 1.8em;
        position: absolute;
        top: -15px;
        right: -7px;
        left: auto;
        z-index: 2;
      }
    }
  }
  .collection-tabs {
    .nav-tabs {
      border-bottom: 1px solid #2a254c;
      margin-bottom: 25px;
      .nav-item {
        margin-bottom: 0px;
        margin-right: -2px;
        .nav-link {
          padding: 0.3rem 3rem;
          border-radius: 0;
          font-size: 18px;
          border: 2px solid #2a254c;
          color: #2a254c;
          transition: 0.2s ease-in;
          &:hover {
            background-color: #327dc0;
            color: #fff;
          }
          &.active {
            background-color: #2a254c;
            color: #fff;
          }
        }
      }
    }
  }
  @media screen and (max-width: 1280px) {
    .collection-tabs {
      .nav-tabs {
        .nav-item {
          .nav-link {
            padding-left: 20px;
            padding-right: 20px;
            font-size: 16px;
          }
        }
      }
    }
  }
  @media screen and (min-width: 1025px) {
    .collection-tabs {
      .tab-content {
        margin-left: 25px;
      }
    }
  }
  @media screen and (max-width: 768px) {
    .collection-tabs {
      .nav-tabs {
        display: block;
        font-size: 0;
        white-space: nowrap;
        overflow-x: auto;
        .nav-item {
          display: inline-block;
          .nav-link {
            padding: 0.2rem 0.9rem;
            font-size: 14px;
          }
        }
      }
    }
  }

  .checkVals ul {
    list-style-type: none;
  }
  .checkVals ul li {
    float: left;
    width: 33.33%;
  }
  .modal-body {
    display: inline-block;
    width: 100%;
    padding: 0 !important;
  }
  /*.modal-dialog {
    width: 750px !important;
    max-width: 750px !important;
  }*/
  .ngxcarouselPointDefault {
    display: none;
  }
  .addNewCont > button {
    margin-right: 10px;
  }

  .FooterSection {
    text-align: right;
  }
  .FooterSection, .checkVals, .addCollect {
    display: inline-block;
    width: 100%;
    padding: 10px 15px;
  }

  app-footer {
    display: inline-block;
    width: 100%;
    margin-top: 20px;
  }

  .pagination {
    display: -ms-flexbox;
    display: flex;
    padding-left: 0;
    list-style: none;
    border-radius: .25rem;
    align-items: center;
    justify-content: center;
    margin: 1em 0;
  }

 /* @media only screen and (max-width: 768px) {
    .modal-dialog {
      width: 80% !important;
      max-width: 80% !important;
    }
  }*/

  .pagination .page-item {
    position: relative;
  }
  .pagination .page-item .page-link {
    width: 40px;
    height: 40px;
    margin: 0 8px;
    font-size: 18px;
    padding: 6px .75rem;
    line-height: 1.42857;
    color: #999 !important;
    border-radius: 50%;
    border-color: #b4b3b3;
    border-width: 2px;
    background-color: #fff;
    text-align: center;
    position: relative;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
  }
  .pagination .page-item:last-child .page-link {
    border-top-right-radius: 50%;
    border-bottom-right-radius: 50%;
  }
  .pagination .page-item:last-child .page-link span, .pagination .page-item:first-child .page-link span {
    display: none;
  }
  .pagination .page-item:first-child .page-link {
    border-top-left-radius: 50%;
    border-bottom-left-radius: 50%;
  }
  .pagination .page-item:first-child .page-link:after {
    content: "\f100";
    font-family: FontAwesome;
    font-weight: normal;
    font-style: normal;
    text-decoration: none;
    position: absolute;
    top: 8%;
    font-size: 22px;
    left: 30%;
  }
  .pagination .page-item:last-child .page-link:after {
    content: "\f101";
    font-family: FontAwesome;
    font-weight: normal;
    font-style: normal;
    text-decoration: none;
    position: absolute;
    top: 8%;
    font-size: 22px;
    left: 34%;
  }

  .pagination .page-item:hover .page-link {
    z-index: 1;
    background-color: #eeeeee;
    border-color: #ddd;
  }
  .pagination .page-item.active .page-link {
    z-index: 1;
    color: #fff !important;
    background-color: #00b171;
    border-color: #00b171;
  }

  @media only screen and (max-width: 650px) {
    .pagination .page-item .page-link {
      width: 30px;
      height: 30px;
      margin: 0 4px;
      font-size: 16px;
      padding: 2px 2px;
    }
    .pagination .page-item:first-child .page-link:after {
      top: 5%;
      font-size: 18px;
    }
    .pagination .page-item:last-child .page-link:after {
      top: 5%;
      font-size: 18px;
    }
    /*.modal-dialog {
      width: 80% !important;
      max-width: 80% !important;
      margin: 1em auto !important;
    }*/
  }
  @media(max-width: 767px) {
    .checkVals ul li {
      width: 50%;
    }
  }

  @media only screen and (max-width: 414px) {
    .pagination .page-item .page-link {
      width: 24px;
      height: 24px;
      margin: 0 4px;
      font-size: 14px;
      padding: 0;
    }
    .pagination .page-item:first-child .page-link:after {
      top: -1px;
      font-size: 16px;
    }
    .pagination .page-item:last-child .page-link:after {
      top: -1px;
      font-size: 16px;
    }
    .removeposition {
      position: static !important;
    }
    .checkVals ul li {
      width: 100%;
    }
  }

  .checkbox_customize .checkbox-inline > input[type=checkbox] {
    margin-right: 10px;
    position: relative;
    top: 2px;
  }
  .btn.btn-video {
    display: inline-block;
    width: 115px;
    height: 32px;
    font: 14px "MyriadPro-Bold";
    margin-right: 10px;
    color: #fff;
    text-transform: uppercase;
    border-radius: 5px;
    background: #1ea6dd;
    text-align: center;
    transition: 0.2s ease-in;
    cursor: pointer;
    border: 0;
    margin-bottom: 10px;
  }
  .btn.btn-video:hover, .btn.btn-video.active, .btn.btn-video:focus {
    background: #218db9;
    color: #fff;
    text-decoration: none;
    box-shadow: none;
  }
  .btn-outline-dark {
    width: 115px;
  }
  .marright15 {
    margin-right: 15px;
  }
@media (max-width: 1199px) {
  .modal-dialog {
    max-width: 95% !important;
  }
}
@media (min-width: 1200px) {
  .modal-dialog {
    max-width: 75% !important;
  }
}
@media (min-width: 1024px) {
  .modal-dialog {
    display: inline-block;
    position: absolute !important;
    top: 50%;
    left: 50%;
    right: 0;
    transform: translate(-50%,-50%) !important;
    margin: 0 auto !important;
  }
}
@media (max-width: 1023px) {
  .login-modal {
    .modal-dialog {
      margin: 0;
      max-width: 100% !important;
      min-height: 100%;
    }
  }
}
.ngxcarousel-inner > .ngxcarousel-items > .item:last-child .carousel-item{
    min-height: 300px;
}

